--- a/LITrary/app/build.gradle
+++ b/LITrary/app/build.gradle
@@ -32,7 +32,10 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.jakewharton:butterknife:8.8.1'
     compile 'com.github.bumptech.glide:glide:4.2.0'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
